--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
 
 
 * {
@@ -60,6 +60,95 @@ nav a:hover{
     font-weight: bold;
     transition: transform 1s ease-in-out;
 }
+
+
+ */
+
+
+
+
+
+
+
+
+ @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins";
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f2f2f2;
+  animation-name: slide-in;
+  animation-duration: 1s;
+
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.logo {
+  background: linear-gradient(45deg, rgb(255, 0, 191) 50%, #ffffff 55%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2.5rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-style: italic;
+  padding: 0.3rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.3rem 2.5rem;
+  color: #fff;
+  background-color: transparent;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.3rem;
+  margin-left: 1rem;
+  transition: transform 1s ease-in-out;
+}
+
+nav a:hover {
+  transform: scale(2.2) !important;
+  font-weight: bold;
+  transition: transform 1s ease-in-out;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    padding: 1rem;
+  }
+  nav a {
+    display: block;
+    margin: 1rem 0;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+}
+
 
 
 
