--- a/CSS/AllRestaurent.css
+++ b/CSS/AllRestaurent.css
@@ -66,8 +66,12 @@ nav a {
 #logo-back p{
   color: #fff;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-style: italic;
+}
+
+#logo-back .fontIncrease{
+  font-size: 2rem;
 }
 
 #search {
